--- a/.github/workflows/symfony-testing.yml
+++ b/.github/workflows/symfony-testing.yml
@@ -24,6 +24,6 @@ jobs:
         env:
           SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
           SOURCE: "."
-          SSH_HOST: ${{ secrets.SERVER_SSH_HOST }}
-          SSH_USER: ${{ secrets.SERVER_SSH_USER }}
+          REMOTE_HOST: ${{ secrets.SERVER_SSH_HOST }}
+          REMOTE_USER: ${{ secrets.SERVER_SSH_USER }}
           TARGET: ${{ secrets.SERVER_APP_DIRECTORY }}
